# oilpulse

./: .gitignore  Package.swift  README.md  README.zh-CN.md  build.sh
Resources/: Info.plist
Sources/OilMonitor/: AlertModels.swift  KeychainHelper.swift  LLMService.swift  MenuBarContentView.swift  Models.swift  NotificationService.swift  OilPriceViewModel.swift  PriceAlertEvaluator.swift  PriceCardView.swift  SettingsView.swift  StatusBarView.swift  StrategyEngine.swift  StrategyModels.swift  StrategyView.swift
mcp-server/: README.md  pyproject.toml  server.py
