[project]
name = "oilpulse-mcp"
version = "0.1.0"
description = "MCP server exposing Brent/WTI oil prices and trends from Yahoo Finance, for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
oilpulse-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]
sources = ["."]
